[package]
name = "orderbook-client"
version = "0.1.0"
edition = "2021"
description = "A simple websocket client for the 10101 orderbook. "

[dependencies]
anyhow = "1"
async-stream = "0.3"
commons = { path = "../commons" }
futures = "0.3"
secp256k1 = { version = "0.27.0", features = ["global-context", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", features = ["macros", "time", "tracing"] }
tokio-tungstenite-wasm = { version = "0.3.0", features = ["native-tls"] }
tracing = "0.1"
url = "2.3.0"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
