[package]
name = "orderbook-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitcoin = "0.29.2"
lightning = "0.0.116"
rust_decimal = { version = "1", features = ["serde-with-float"] }
secp256k1 = { version = "0.24.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3", features = ["serde", "std"] }
tokio-tungstenite = { version = "0.20" }
trade = { path = "../trade" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1"
