[package]
name = "payout_curve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcoin = "0.29.0"
rust_decimal = "1"
serde = "1.0.147"
serde_json = "1"
trade = { path = "../trade" }

[dev-dependencies]
csv = "1.3.0"
dlc-manager = "0.4.0"
proptest = "1"
rust_decimal_macros = "1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
