[package]
name = "tests-e2e"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1"
coordinator-commons = { path = "../coordinator-commons" }
flutter_rust_bridge = "1.75.3"
native = { path = "../../mobile/native" }
quote = "1.0.28"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1"
tempfile = "3.6.0"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
