[package]
name = "tests-e2e"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1"
bitcoin = "0.29.2"
coordinator = { path = "../../coordinator" }
coordinator-commons = { path = "../coordinator-commons" }
flutter_rust_bridge = "1.78.0"
ln-dlc-node = { path = "../ln-dlc-node" }
maker = { path = "../../maker" }
native = { path = "../../mobile/native" }
orderbook-commons = { path = "../orderbook-commons" }
parking_lot = { version = "0.12.1" }
quote = "1.0.28"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rust_decimal = { version = "1" }
rust_decimal_macros = "1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
tempfile = "3.6.0"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assertables = "7.0.1"
bitcoin = "0.29.2"
clap = { version = "4", features = ["derive"] }
local-ip-address = "0.5.1"
