[package]
name = "tokio-extras"
version = "0.1.0"
edition = "2021"
description = "Utilities for working with tokio, including instrumented futures and controlling task lifetimes with Drop"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
pin-project-lite = "0.2.9"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "tracing"] }
tracing = { version = "0.1.37" }
xtra = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "tracing"] }
