[package]
name = "trade"
version = "0.1.0"
edition = "2021"
description = "A common library for the shared model and functions for trading"

[lib]

[dependencies]
anyhow = "1"
bdk = { version = "0.24.0" }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1.26"
serde = { version = "1.0.152", features = ["serde_derive"] }
time = { version = "0.3.20", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
