[package]
name = "trade"
version = "0.1.0"
edition = "2021"
description = "A common library for the shared model and functions for trading"

[lib]

[dependencies]
anyhow = "1"
bitcoin = { version = "0.29", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = { version = "1.0.152", features = ["serde_derive"] }
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
