[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["heapless"] }
anyhow = "1"
base64 = "0.21.0"
bdk = { version = "0.28.0", default-features = false, features = ["key-value-db", "use-esplora-blocking"] }
bip21 = "0.2.0"
bitcoin = "0.29.2"
commons = { path = "../../crates/commons" }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "extras"] }
diesel_migrations = "2.0.0"
dlc = "0.4.0"
dlc-messages = { version = "0.4.0" }
flutter_rust_bridge = "1.78.0"
futures = "0.3"
hex = "0.4"
itertools = "0.10"
lightning = { version = "0.0.116" }
lightning-invoice = { version = "0.24" }
lightning-persister = { version = "0.0.116" }
ln-dlc-node = { path = "../../crates/ln-dlc-node" }
ln-dlc-storage = { path = "../../crates/ln-dlc-storage" }
openssl = { version = "0.10.60", features = ["vendored"] }
orderbook-client = { path = "../../crates/orderbook-client" }
parking_lot = { version = "0.12.1" }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
rusqlite = { version = "0.29.0", features = ["backup", "bundled"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1"
state = "0.5.3"
thiserror = "1"
time = { version = "0.3.20", features = ["formatting"] }
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "time", "json"] }
trade = { path = "../../crates/trade" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
dlc = { version = "0.4.0" }
secp256k1-zkp = { version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std"] }
